--- a/syles.css
+++ b/syles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Segoe UI', sans-serif;
-  background-color: #f4f4f9;
-  color: #333;
+  background-color: darkblue;
+  color: black;
   margin: 0;
   padding: 0;
 }
